
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-777] Made consistent the checkDirty behaviour of save buttons across manager
- [#MODX-938] Added check to build to check if core+core.transport.zip were removed before build starts. 
- [#MODX-629] Added missing automatic_alias setting to build
- [#MODX-790] Fixed issue where couldnt browse back to root directory with MODx.Browser
- [#MODX-902] Fixed empty warning message for removing category
- Fixed bug with removing categories
- Fixed issue where couldn't drag a resource onto a resource with no children
- [#MODX-1130] Fixed issue with parent triggerfield; also redid how tree hrefs load so that clicking on a node in the tree to load url can be disabled
- [#MODX-1133] Fixed issues with hotkey behavior
- [#MODX-1230] Fixed issue where drag Resource to symlink/weblink content field would add tags as well
- [#MODX-1273] Added OnLoadWebPageCache event invocation to modRequest->getResource().
- [#MODX-1273] Fixed events in User update/create form
- Enabled compression of manager JS scripts by changing the Setting "compress_js" to true.
- Upgraded ExtJS to ExtJS 3.0.2
- [#MODX-1270] OnManagerCreateGroup and OnWebCreateGroup events now fire
- [#MODX-1237] Fixed warning in modParser with regards to uninitialized variable
- [#MODX-979] Added password_generated_length (the length of the auto-generated password) and password_min_length (the minimum length for a password)
- Cleaned up usergroup processors
- Added sanity checks to usergroup processors
- Prevent possible issue on usergroup update that would wipe related objects
- Prevent possible issue that would allow user to remove Administrator group
- Removed some legacy todo statements