@@ -384,7 +384,7 @@ Ext.extend(MODx.panel.Static,MODx.FormPanel,{
 
     ,success: function(o) {
         Ext.getCmp('modx-grid-resource-security').getStore().commitChanges();
-        var t = parent.Ext.getCmp('modx-resource-tree');
+        var t = Ext.getCmp('modx-resource-tree');
         var ctx = Ext.getCmp('modx-static-context-key').getValue();
         var pa = Ext.getCmp('modx-static-parent').getValue();
         t.refreshNode(ctx+'_'+pa,true);
