@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-928] Fixed issue where parent resource wasnt refreshing properly
 - [#MODX-777] Made consistent the checkDirty behaviour of save buttons across manager
 - [#MODX-938] Added check to build to check if core+core.transport.zip were removed before build starts. 
 - [#MODX-629] Added missing automatic_alias setting to build
